WebCore/rendering/RenderCounter.h
@@ -40,6 +40,8 @@ public:
     void invalidate(const AtomicString& identifier);
 
     static void destroyCounterNodes(RenderObject*);
+    static void destroyCounterNode(RenderObject*, const AtomicString& identifier);
+    static void rendererSubtreeAttached(RenderObject*);
 
 private:
     virtual const char* renderName() const;
